--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Effective Solutions for Your Business" />
+    <title>WebStudio</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="/index.html">WebStudio</a>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </header>
+
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
