--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <a href="/index.html">WebStudio</a>
       <ul>
-        <li></li>
+        <li><a href="http://"></a></li>
         <li></li>
         <li></li>
       </ul>
