--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
   </head>
   <body>
     <header>
-      <a href="/index.html">WebStudio</a>
-      <ul>
-        <li><a href="http://"></a></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </header>
+      <nav>
+        <a href="/index.html" alt="logo"></a> WebStudio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+          </header>
 
-    <main></main>
+    <main>
+      <section>
+        <h1>Effective Solutions
+for Your Business</h1>
+<button type="Order Service">Order Service</button>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
