--- a/index.html
+++ b/index.html
@@ -2,29 +2,128 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Effective Solutions for Your Business" />
     <title>WebStudio</title>
   </head>
   <body>
     <header>
+      <a href="./index.html">WebStudio</a>
       <nav>
-        <a href="/index.html" alt="logo"></a> WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="/">Studio</a></li>
+          <li><a href="/">Portfolio</a></li>
+          <li><a href="/">Contacts</a></li>
         </ul>
       </nav>
-          </header>
+      <address>
+        <ul>
+          <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </header>
 
     <main>
+      <!-- Hero image -->
       <section>
-        <h1>Effective Solutions
-for Your Business</h1>
-<button type="Order Service">Order Service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
+      <!-- section 1 -->
+      <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p
+              >Our goal is to identify the business problem to walk away with the perfect and
+              creative solution. Bring the key message to the brand's audience for the best price
+              within the shortest possible time. Research and confirm brands that present the
+              strongest digital growth opportunities and minimize risk. Design practice focused on
+              digital experiences. We bring forth a deep passion for problem-solving.</p
+            >
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p
+              >Our goal is to identify the business problem to walk away with the perfect and
+              creative solution. Bring the key message to the brand's audience for the best price
+              within the shortest possible time. Research and confirm brands that present the
+              strongest digital growth opportunities and minimize risk. Design practice focused on
+              digital experiences. We bring forth a deep passion for problem-solving.</p
+            >
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p
+              >Our goal is to identify the business problem to walk away with the perfect and
+              creative solution. Bring the key message to the brand's audience for the best price
+              within the shortest possible time. Research and confirm brands that present the
+              strongest digital growth opportunities and minimize risk. Design practice focused on
+              digital experiences. We bring forth a deep passion for problem-solving.</p
+            >
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p
+              >Our goal is to identify the business problem to walk away with the perfect and
+              creative solution. Bring the key message to the brand's audience for the best price
+              within the shortest possible time. Research and confirm brands that present the
+              strongest digital growth opportunities and minimize risk. Design practice focused on
+              digital experiences. We bring forth a deep passion for problem-solving.</p
+            >
+          </li>
+        </ul>
+      </section>
+
+      <!-- section 2 -->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li><img src="./images/work/img1.jpg" width="360" height="300" alt="monitor" /></li>
+          <li><img src="./images/work/img2.jpg" width="360" height="300" alt="phone" /></li>
+          <li
+            ><img src="./images/work/img3.jpg" width="360" height="300" alt="phone in hands"
+          /></li>
+        </ul>
+      </section>
+
+      <!-- section 3 -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="./images/Team/img1.jpg" alt="man" width="264" height="260" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/Team/img2.jpg" alt="man" width="264" height="260" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/Team/img3.jpg" alt="woman" width="264" height="260" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/Team/img4.jpg" alt="man" width="264" height="260" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p
+        >Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.</p
+      >
+    </footer>
   </body>
 </html>
