--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
       <!-- section 1 -->
       <section>
+        <h2>Content</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -81,7 +82,7 @@
 
       <!-- section 2 -->
       <section>
-        <h2>What Are We Doing</h2>
+        <h2>What are we doing</h2>
         <ul>
           <li><img src="./images/work/img1.jpg" width="360" height="300" alt="monitor" /></li>
           <li><img src="./images/work/img2.jpg" width="360" height="300" alt="phone" /></li>
