--- a/index.html
+++ b/index.html
@@ -5,62 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Effective Solutions for Your Business" />
     <title>WebStudio</title>
+    <!-- Cuctom styles -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="/">Studio</a></li>
-          <li><a href="/">Portfolio</a></li>
-          <li><a href="/">Contacts</a></li>
+  <body class="page">
+    <!-- Header -->
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo" href="./index.html">Web<span class="header-studio">Studio</span></a>
+        <ul class="header-list">
+          <li class="header-item"><a class="header-link" href="/">Studio</a></li>
+          <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
+          <li class="header-item"><a class="header-link" href="/">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <address class="header-address">
+        <ul class="header-contact">
+          <li class="contact-link"> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
 
-    <main>
+    <main class="main">
       <!-- Hero image -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
 
-      <!-- section 1 -->
-      <section>
-        <h2>Content</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <!-- section-feature -->
+      <section class="section feature">
+        <h2 class="feature-title">Content</h2>
+        <ul class="feature-list">
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Strategy</h3>
+            <p class="feature-lead">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Punctuality</h3>
+            <p class="feature-lead">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Diligence</h3>
+            <p class="feature-lead">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="feature-subtitle">Technologies</h3>
+            <p class="feature-lead">
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
             </p>
@@ -68,48 +71,73 @@
         </ul>
       </section>
 
-      <!-- section 2 -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li><img src="./images/work/img1.jpg" width="360" height="300" alt="monitor" /></li>
-          <li><img src="./images/work/img2.jpg" width="360" height="300" alt="phone" /></li>
-          <li
-            ><img src="./images/work/img3.jpg" width="360" height="300" alt="phone in hands"
+      <!-- section services -->
+      <section class="section services">
+        <h2 class="services-title">What are we doing</h2>
+        <ul class="services-list">
+          <li class="services-item"
+            ><img
+              class="services-img"
+              src="./images/work/img1.jpg"
+              width="360"
+              height="300"
+              alt="monitor"
+          /></li>
+          <li class="services-item"
+            ><img
+              class="services-img"
+              src="./images/work/img2.jpg"
+              width="360"
+              height="300"
+              alt="phone"
+          /></li>
+          <li class="services-item"
+            ><img
+              class="services-img"
+              src="./images/work/img3.jpg"
+              width="360"
+              height="300"
+              alt="phone in hands"
           /></li>
         </ul>
       </section>
 
-      <!-- section 3 -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <!-- section team -->
+      <section class="section team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img src="./images/Team/img1.jpg" alt="man" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-lead">Product Designer</p>
+          </li>
+          <li class="team-item">
+            <img class="team-img" src="./images/Team/img2.jpg" alt="man" width="264" height="260" />
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-lead">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Team/img2.jpg" alt="man" width="264" height="260" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <img
+              class="team-img"
+              src="./images/Team/img3.jpg"
+              alt="woman"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-lead">Marketing</p>
           </li>
-          <li>
-            <img src="./images/Team/img3.jpg" alt="woman" width="264" height="260" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/Team/img4.jpg" alt="man" width="264" height="260" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+          <li class="team-item">
+            <img class="team-img" src="./images/Team/img4.jpg" alt="man" width="264" height="260" />
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-lead">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html">Web<span class="footer-studio">Studio</span></a>
+      <p class="footer-lead"
         >Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.</p
       >
