--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <li class="team-item">
             <img src="./images/Team/img1.jpg" alt="man" width="264" height="260" />
             <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="team-lead">Product Designerі</p>
+            <p class="team-lead">Product Designer</p>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/Team/img2.jpg" alt="man" width="264" height="260" />
