--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Effective Solutions for Your Business" />
     <title>WebStudio</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Normalize -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <!-- Cuctom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -13,17 +25,19 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo" href="./index.html">Web<span class="header-studio">Studio</span></a>
-        <ul class="header-list">
+        <ul class="header-list list">
           <li class="header-item"><a class="header-link" href="/">Studio</a></li>
           <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
           <li class="header-item"><a class="header-link" href="/">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
-        <ul class="header-contact">
-          <li class="contact-link"> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li>
-            <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul class="header-list list">
+          <li class="header-link">
+            <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li
+          >
+          <li class="header-link">
+            <a class="header-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -39,31 +53,31 @@
       <!-- section-feature -->
       <section class="section feature">
         <h2 class="feature-title">Content</h2>
-        <ul class="feature-list">
+        <ul class="feature-list list">
           <li class="feature-item">
             <h3 class="feature-subtitle">Strategy</h3>
-            <p class="feature-lead">
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
           <li class="feature-item">
             <h3 class="feature-subtitle">Punctuality</h3>
-            <p class="feature-lead">
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
           <li class="feature-item">
             <h3 class="feature-subtitle">Diligence</h3>
-            <p class="feature-lead">
+            <p class="feature-text">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
           <li class="feature-item">
             <h3 class="feature-subtitle">Technologies</h3>
-            <p class="feature-lead">
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
             </p>
@@ -74,7 +88,7 @@
       <!-- section services -->
       <section class="section services">
         <h2 class="services-title">What are we doing</h2>
-        <ul class="services-list">
+        <ul class="services-list list">
           <li class="services-item"
             ><img
               class="services-img"
@@ -105,16 +119,16 @@
       <!-- section team -->
       <section class="section team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-item">
-            <img src="./images/Team/img1.jpg" alt="man" width="264" height="260" />
+            <img class="team-img" src="./images/Team/img1.jpg" alt="man" width="264" height="260" />
             <h3 class="team-subtitle">Mark Guerrero</h3>
-            <p class="team-lead">Product Designer</p>
+            <p class="team-text">Product Designer</p>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/Team/img2.jpg" alt="man" width="264" height="260" />
             <h3 class="team-subtitle">Tom Ford</h3>
-            <p class="team-lead">Frontend Developer</p>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -125,19 +139,19 @@
               height="260"
             />
             <h3 class="team-subtitle">Camila Garcia</h3>
-            <p class="team-lead">Marketing</p>
+            <p class="team-text">Marketing</p>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/Team/img4.jpg" alt="man" width="264" height="260" />
             <h3 class="team-subtitle">Daniel Wilson</h3>
-            <p class="team-lead">UI Designer</p>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html">Web<span class="footer-studio">Studio</span></a>
-      <p class="footer-lead"
+      <p class="footer-text"
         >Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.</p
       >
