--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Effective Solutions for Your Business" />
-    <title>WebStudio</title>
+    <title>Portfolio</title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,7 +26,7 @@
       <nav class="header-nav">
         <a class="header-logo" href="./index.html">Web<span class="header-studio">Studio</span></a>
         <ul class="header-list list">
-          <li class="header-item"><a class="header-link" href="/">Studio</a></li>
+          <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
           <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
           <li class="header-item"><a class="header-link" href="/">Contacts</a></li>
         </ul>
