--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
       <nav class="header-nav">
         <a class="header-logo" href="./index.html">Web<span class="header-studio">Studio</span></a>
         <ul class="header-list list">
-          <li class="header-item"><a class="header-link" href="/">Studio</a></li>
+          <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
           <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
           <li class="header-item"><a class="header-link" href="/">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
-        <ul class="header-list list">
-          <li class="header-link">
+        <ul class="header-contact-list list">
+          <li class="header-contact-link">
             <a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li
           >
           <li class="header-link">
