--- a/portfolio.html
+++ b/portfolio.html
@@ -24,24 +24,26 @@
     <!-- Header -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="./index.html">Web<span class="header-studio">Studio</span></a>
+        <a class="header-logo link" href="./index.html"
+          >Web<span class="header-studio">Studio</span></a
+        >
         <ul class="header-list list">
           <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
           <li class="header-item"
             ><a class="header-link link" href="./portfolio.html">Portfolio</a></li
           >
-          <li class="header-item"><a class="header-link link" href="/">Contacts</a></li>
+          <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
         <ul class="header-contact-list list">
           <li class="header-contact">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com"
+            <a class="header-contact-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             ></li
           >
           <li class="header-contact">
-            <a class="header-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="header-contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -50,13 +52,12 @@
     <main class="main">
       <!-- Filter btn -->
       <section>
-        <ul class="filter-list list">
-          <li class="filter-item"><button class="filter-btn-all" type="button">All></button></li>
-          <li class="filter-item"><button class="filter-btn" type="button">Web Site</button></li>
-          <li class="filter-item"><button class="filter-btn" type="button">App</button></li>
-          <li class="filter-item"><button class="filter-btn" type="button">Design</button></li>
-          <li class="filter-item"><button class="filter-btn" type="button">Marketing</button></li>
-        </ul>
+        <h1 class="filter-title">Button</h1>
+        <button class="filter-btn-all" type="button">All></button>
+        <button class="filter-btn" type="button">Web Site</button>
+        <button class="filter-btn" type="button">App</button>
+        <button class="filter-btn" type="button">Design</button>
+        <button class="filter-btn" type="button">Marketing</button>
 
         <!-- Filter items -->
         <ul class="list-block list">
