--- a/index.html
+++ b/index.html
@@ -25,16 +25,14 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo link" href="./index.html"
-          >Web<span class="header-studio">Studio</span></a
+          >Web<span class="header-studio link">Studio</span></a
         >
         <ul class="header-list list">
-          <li class="header-item link"
-            ><a class="header-link link" href="./index.html">Studio</a></li
-          >
-          <li class="header-item link"
+          <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
+          <li class="header-item"
             ><a class="header-link link" href="./portfolio.html">Portfolio</a></li
           >
-          <li class="header-item link"><a class="header-link link" href="">Contacts</a></li>
+          <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
@@ -158,7 +156,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html">Web<span class="footer-studio">Studio</span></a>
+      <a class="footer-logo link" href="./index.html"
+        >Web<span class="footer-studio link">Studio</span></a
+      >
       <p class="footer-text"
         >Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.</p
