--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
           >Web<span class="header-studio link">Studio</span></a
         >
         <ul class="header-list list">
-          <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
-          <li class="header-item"
+          <li class="header-item link"
+            ><a class="header-link link" href="./index.html">Studio</a></li
+          >
+          <li class="header-item link"
             ><a class="header-link link" href="./portfolio.html">Portfolio</a></li
           >
-          <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
+          <li class="header-item link"><a class="header-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
