--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         <a class="header-logo link" href="./index.html"
           >Web<span class="header-studio link">Studio</span></a
         >
-        <ul class="header-list list">
+        <ul class="header-list list link">
           <li class="header-item link"
             ><a class="header-link link" href="./index.html">Studio</a></li
           >
