--- a/portfolio.html
+++ b/portfolio.html
@@ -72,9 +72,10 @@
                 src="./images/Filter/img1.jpg"
                 width="360"
                 height="300"
-                alt="banking program in the phone" /></a
-            ><h3 class="filter-subtitle">Banking App Interface Concept</h3>
-            <p class="filter-text">App</p></li
+                alt="banking program in the phone"
+              /><h2 class="filter-subtitle">Banking App Interface Concept</h2>
+              <p class="filter-text">App</p></a
+            ></li
           >
           <li class="item-site"
             ><a class="filter-link" href=""
@@ -84,9 +85,10 @@
                 width="360"
                 height="300"
                 alt="Cashless payment by phone/bank card"
-            /></a>
-            <h3 class="filter-subtitle">Cashless Payment</h3>
-            <p class="filter-text">Marketing</p></li
+              />
+              <h2 class="filter-subtitle">Cashless Payment</h2>
+              <p class="filter-text">Marketing</p></a
+            ></li
           >
           <li class="item-site"
             ><a class="filter-link" href=""
@@ -96,9 +98,10 @@
                 width="360"
                 height="300"
                 alt="Application for meditation via computer/phone"
-            /></a>
-            <h3 class="filter-subtitle">Meditation App</h3>
-            <p class="filter-text">App</p></li
+              />
+              <h2 class="filter-subtitle">Meditation App</h2>
+              <p class="filter-text">App</p></a
+            ></li
           >
           <li class="item-site"
             ><a class="filter-link" href=""
@@ -108,9 +111,10 @@
                 width="360"
                 height="300"
                 alt="interior of the car"
-            /></a>
-            <h3 class="filter-subtitle">Taxi Service</h3>
-            <p class="filter-text">Marketing</p></li
+              />
+              <h2 class="filter-subtitle">Taxi Service</h2>
+              <p class="filter-text">Marketing</p></a
+            ></li
           >
           <li class="item-site"
             ><a class="filter-link" href=""
@@ -121,9 +125,9 @@
                 height="300"
                 alt="Screen illustrations in the phone"
               />
-            </a>
-            <h3 class="filter-subtitle">Screen Illustrations</h3>
-            <p class="filter-text">Design</p></li
+              <h2 class="filter-subtitle">Screen Illustrations</h2>
+              <p class="filter-text">Design</p></a
+            ></li
           >
           <li class="item-site"
             ><a class="filter-link" href=""
@@ -133,9 +137,10 @@
                 width="360"
                 height="300"
                 alt="a girl looks at the phone"
-            /></a>
-            <h3 class="filter-subtitle">Online Courses</h3>
-            <p class="filter-text">Marketing</p></li
+              />
+              <h2 class="filter-subtitle">Online Courses</h2>
+              <p class="filter-text">Marketing</p></a
+            ></li
           >
           <li class="item-site"
             ><a class="filter-link" href=""
@@ -145,9 +150,10 @@
                 width="360"
                 height="300"
                 alt="lots of Instagram Stories"
-            /></a>
-            <h3 class="filter-subtitle">Instagram Stories Concept</h3>
-            <p class="filter-text">Design</p></li
+              />
+              <h2 class="filter-subtitle">Instagram Stories Concept</h2>
+              <p class="filter-text">Design</p></a
+            ></li
           >
           <li class="item-site"
             ><a class="filter-link" href=""
@@ -157,9 +163,10 @@
                 width="360"
                 height="300"
                 alt="girl with a bag of fruit"
-            /></a>
-            <h3 class="filter-subtitle">Organic Food</h3>
-            <p class="filter-text">Web Site</p></li
+              />
+              <h2 class="filter-subtitle">Organic Food</h2>
+              <p class="filter-text">Web Site</p></a
+            ></li
           >
           <li class="item-site"
             ><a class="filter-link" href=""
@@ -169,9 +176,10 @@
                 width="360"
                 height="300"
                 alt="the bartender pours coffee into a glass"
-            /></a>
-            <h3 class="filter-subtitle">Fresh Coffee</h3>
-            <p class="filter-text">Web Site</p></li
+              />
+              <h2 class="filter-subtitle">Fresh Coffee</h2>
+              <p class="filter-text">Web Site</p></a
+            ></li
           >
         </ul>
       </section>
