--- a/portfolio.html
+++ b/portfolio.html
@@ -40,12 +40,12 @@
       <address class="header-address">
         <ul class="header-contact-list list">
           <li class="header-contact">
-            <a class="header-contact-link" href="mailto:info@devstudio.com"
+            <a class="header-contact-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             ></li
           >
           <li class="header-contact">
-            <a class="header-contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="header-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
