--- a/portfolio.html
+++ b/portfolio.html
@@ -39,13 +39,13 @@
       </nav>
       <address class="header-address">
         <ul class="header-contact-list list">
-          <li class="header-contact">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com"
+          <li class="header-contact link">
+            <a class="header-contact-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             ></li
           >
-          <li class="header-contact">
-            <a class="header-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="header-contact link">
+            <a class="header-contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
