--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,13 @@
         </ul>
       </nav>
       <address class="header-address">
-        <ul class="header-contact-list list">
-          <li class="header-contact link">
+        <ul class="header-contact-list list link">
+          <li class="header-contact">
             <a class="header-contact-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             ></li
           >
-          <li class="header-contact link">
+          <li class="header-contact">
             <a class="header-contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
