--- a/portfolio.html
+++ b/portfolio.html
@@ -25,20 +25,16 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo link" href="./index.html"
-          >Web<span class="header-studio link">Studio</span></a
+          >Web<span class="header-studio">Studio</span></a
         >
-        <ul class="header-list list link">
-          <li class="header-item link"
-            ><a class="header-link link" href="./index.html">Studio</a></li
-          >
-          <li class="header-item link"
-            ><a class="header-link link" href="./portfolio.html">Portfolio</a></li
-          >
-          <li class="header-item link"><a class="header-link link" href="">Contacts</a></li>
+        <ul class="header-list list">
+          <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
+          <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
+          <li class="header-item"><a class="header-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
-        <ul class="header-contact-list list link">
+        <ul class="header-contact-list list">
           <li class="header-contact">
             <a class="header-contact-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
