--- a/index.html
+++ b/index.html
@@ -25,16 +25,12 @@
     <header class="header">
       <nav class="header-nav">
         <a class="header-logo link" href="./index.html"
-          >Web<span class="header-studio link">Studio</span></a
+          >Web<span class="header-studio">Studio</span></a
         >
-        <ul class="header-list list link">
-          <li class="header-item link"
-            ><a class="header-link link" href="./index.html">Studio</a></li
-          >
-          <li class="header-item link"
-            ><a class="header-link link" href="./portfolio.html">Portfolio</a></li
-          >
-          <li class="header-item link"><a class="header-link link" href="">Contacts</a></li>
+        <ul class="header-list list">
+          <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
+          <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
+          <li class="header-item"><a class="header-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
