--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       <section>
         <h1 class="filter-title">Button</h1>
         <ul class="filter-list list">
-          <li class="filter-item"><button class="filter-btn-all" type="button">All></button></li>
+          <li class="filter-item"><button class="filter-btn-all" type="button">All</button></li>
           <li class="filter-item"><button class="filter-btn" type="button">Web Site</button></li>
           <li class="filter-item"><button class="filter-btn" type="button">App</button></li>
           <li class="filter-item"><button class="filter-btn" type="button">Design</button></li>
